# dvisirule

./: DEPENDS.txt  Makefile  README.md  cmd.mk  demo.tex  dvisirule-expg.mk  dvisirule-marker.awk  dvisirule-pgnum.awk  dvisirule.dtx  dvisirule.ins  dvisirule.sh  fonts.tex  reconf.sh
src/: Makefile.am  configure.ac  dvi.h  dvisirule-bin.c
